# AgentX

./: .gitignore  .replit  next.config.js  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.js  vercel.json
.github/workflows/: main.yml
api/auth/github/: route.js
api/chat/: route.js
api/execute/: route.js
api/git_clone/: route.js
api/git_operation/: route.js
api/github/callback/: route.js
api/github/repos/: route.js
api/write_files/: route.js
app/api/auth/github/: route.ts
app/api/chat/: route.ts
app/api/execute/: route.ts
app/api/git_clone/: route.ts
app/api/git_operation/: route.ts
app/api/github/callback/: route.ts
app/api/github/repos/: route.ts
app/api/write_files/: route.ts
attached_assets/: repl_1769242759688.txt
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx
server/: app.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/auth/[...nextauth]/: route.ts
src/app/api/chat/: route.ts
src/app/api/github/import/: route.ts
src/app/api/github/push/: route.ts
src/app/api/github/repos/: route.ts
src/components/: AIChat.tsx  CodeEditor.tsx  Console.tsx  FileExplorer.tsx  Header.tsx  ImportModal.tsx  Terminal.tsx
src/lib/: auth.ts
src/types/: index.ts
