[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-sqlalchemy>=3.1.1",
    "gitpython>=3.1.46",
    "gunicorn>=24.1.1",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
]
